<resources>
    <string name="app_name">Spain Computing University</string>
    <string name="action_settings">Settings</string>
	<string name="no_datos">NO SE ENCUENTRAN DATOS</string>
	<string name="image">imagen</string>
	<string name="imagenes">imágenes</string>
	<string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="cargando_datos">Cargando datos</string>
	<string name="cargando">Espere</string>
	<string name="cargando_imagenes">Cargando imágenes</string>
	<string name="error_cargando_imagenes_JSON">ERROR Peticion JSON</string>
	<string name="carga_ok">Carga OK</string>
	<string name="action_share">Compartir</string>
	<string name="action_share_json">Compartir URL JSON</string>
    <string name="msg_share">Te comparto la información de </string>
    <string name="txt_notification_title">Carga de datos terminada</string>
    <string name="txt_notification_title2">Completada carga de imágenes de instagram</string>
    <string name="action_delete_place">Eliminar lugar de la base de datos</string>
    <string name="confirm_action_delete_place">Confirma eliminar lugar seleccionado?</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="cerrar">Cerrar</string>
    <string name="back_to_top">Inicio lista</string>
	<string name="volver">Volver</string>
	<string name="ruta_google">Ruta Google</string>
	<string name="link">Link</string>
	<string name="txt_marker_title">Lugar agregado %1$s</string>
	<string name="txt_marker_snippet">A las %1$s</string>
	<string name="providers">Providers</string>
	<string name="delete_places">Elimninar lugares registrados</string>
	 <string name="list">List</string>
	 <string name="page_view">Page view</string>
	 <string name="grid_view">Vista Grid</string>
	 <string name="actualizar">Actualizar</string>
	 <string name="orderByPositionASC">Order by position ASC</string>
	 <string name="orderByPositionDESC">Order by position DESC</string>
	 <string name="distancia">Distancia</string>
	 <string name="distanciaMapa">Distancia mapa</string>
	 <string name="kilometros">kilómetros</string>
	 <string name="metros">metros</string>
	 <string name="sin_datos">Sin datos</string>
	 <string name="file_size">Tamaño fichero</string>
	 <string name="status">estado</string>
	 <string name="places">Places</string>
	 <string name="listado">Listado</string>
	 <string name="detalle">Detalle</string>
	 <string name="acercaDe">Acerca de</string>
	 <string name="conexion">Conexión</string>
	 <string name="tipo">Tipo</string>
	 <string name="gridView">GridView</string>
	 <string name="gridImageView">GridImageView</string>
	 <string name="coverFlowView">CoverFlowView</string>
	 <string name="spinnerView">SpinnerView</string>
	 <string name="tabsView">TabsView</string>
	 <string name="preferencias">Preferencias</string>
	 <string name="mapa">Mapa</string>
	 <string name="salir">¿Confirma salir de la aplicación?</string>
	 <string name="confirmar_delete_places">¿Confirma eliminar los lugares registrados?</string>
	 <string name="confirmar_enable_provider">Debe activar servicio de ubicación para acceder a la información de su posición</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
	 <string name="Aceptar">Aceptar</string>
	 <string name="realidad_aumentada">Realidad aumentada</string>
	 <string name="idioma">Idioma</string>
	 <string name="salir_text">Salir</string>
	 <string name="idiomas_soportados">Idiomas soportados:Español/Inglés</string>
	 <string name="InfoAplicacion">SPain COmputing UNiversity</string>
     <string name="InfoNombre">Jose Manuel Ortega Candel</string>
     <string name="InfoAnyo">2014 ©</string>
     <string-array name="drawer_options">
        <item>List view</item>
        <item>View Pager</item>
        <item>Places</item>
        <item>Acerca de</item>
    </string-array>
     <string name="contactosSearch">Contactos con búsqueda</string>
     <string name="drawer_open">Abrir</string>
     <string name="drawer_close">Cerrar</string>
     <string name="source_code">Source code</string>
     <string name="loading_source_code">Loading Source code....</string>
     <string name="action_previous">Previous</string>
     <string name="action_next">Next</string>
     <string name="action_finish">Finish</string>
     <string name="action_last">Last</string>
     <string name="action_start">Start</string>
     <string name="info">Info</string>
	<string name="exportar_importar">Exportar/Importar</string>
	<string name="exportar">Exportar</string>
	<string name="importar">Importar</string>
	<string name="procesando">Procesando datos</string>
	<string name="exportar_ok">Exportación correcta de lugares</string>
	<string name="exportar_error">Error en la exportación</string>
	<string name="importar_ok">Importación correcta de lugares</string>
	<string name="importar_error">Error en la importación</string>
	<string name="importar_pregunta">La lista de lugares actual se sobreescribirá ¿Desea continuar?</string>
	<string name="exportar_importar_info">La exportación e importación de datos se realiza desde la ruta de la tarjeta SD: /Android/data/com.proyecto.spaincomputing.lugaresDB/backup/placesRespaldo.db</string>
	<string name="recargar_lugares">Recargar lista de lugares</string>
	<string name="acerca_de_export_import">Acerca de Importar/Exportar</string>
     <string name="accion">Acción</string>
     <string name="mostrar">Mostrar</string>
     <string name="vista">Vista</string>
     <string name="mover">Mover</string>
     <string name="animar">Animar</string>
     <string name="mover3d">Mover 3D</string>
     <string name="posicion">Mi posición</string>
     <string name="opengl">Soporte OpenGL</string>
     <string name="version_opengl">Versión OpenGL</string>
     <string name="version_ok_opengl">La versión de opengl instalada permite soportar la nueva versión v2 de mapas</string>
     <string name="version_error_opengl">La versión de opengl instalada no permite soportar la nueva versión v2 de mapas</string>
     <string name="ver_detalles">Ver detalles</string>
     <string name="sin_conexion">Sin conexión</string>
     <string name="enlace_no_encontrado">Enlace no encontrado</string>
     <string name="seleccionar_universidad">Seleccione una universidad para visualizar el mapa</string>
     <string name="seleccionar_item_lista">Seleccione un elemento de la lista</string>
     <string name="www">WWW</string>
     <string name="favorito">Favorito</string>
     <string name="favoritos">Favoritos</string>
     <string name="anyadir_favorito">Añadir a favoritos</string>
     <string name="eliminar_favorito">Eliminar de favoritos</string>
     <string name="confirmar_eliminar_favorito">Confirmar eliminar favorito</string>
     <string name="no_hay_favoritos">No hay favoritos</string>
     <string name="favorito_existe">La universidad ya aparece en la lista de favoritos</string>
     <string name="favorito_ok">Universidad agregada a favoritos</string>
     <string name="eliminada_favoritos">Universidad eliminada de favoritos</string>
     <string name="seleccione">Seleccione una universidad para visualizar el detalle</string>
     <string name="compartir">Compartir</string>
     <string name="compartir_url_json">Compartir URL JSON</string>
     <string name="aplicacion">Aplicación</string>
     <string name="search">Search</string>
	<string name="comprobar_campos_mail">Compruebe los campos del formulario.Destinatario y Mensaje son obligatorios</string>
	<string name="enviar_mail">Enviar MAIL</string>
	<string name="envio_mail_ok">Correo enviado correctamente</string>
	<string name="envio_mail_error">Error al enviar el Correo</string>
	<string name="enviar_imagen_adjunta">Enviar imagen adjunta</string>
	<string name="asunto">Asunto</string>
	<string name="para">Para</string>
	<string name="informar_mensaje">Debe informar el campo de mensaje</string>
    <string name="informar_destinatario">Debe informar el campo destinatario</string>
	<string name="mensaje">Mensaje</string>
	<string name="pref_notificaciones">Notificaciones</string>
	<string name="pref_notificaciones_favoritos">Notificaciones favoritos</string>
	<string name="pref_grid_view">GridView</string>
	<string name="pref_grid_columns">Número de columnas</string>
	<string name="contactos">Contactos</string>
	<string name="mostrar_contactos">Mostrar Contactos</string>
	<string name="seleccione_telefono">Seleccione teléfono</string>
	<string name="seleccione_email">Seleccione email</string>
	<string name="contactos_no_encontrados">No se han encontrado contactos</string>
	<string name="contactos_encontrados">contactos encontrados</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
	<string name="panoramio">Panoramio</string>
	<string name="ir_al_sitio">Ir al sitio</string>
	<string name="instagram">Instagram</string>
	<string name="registro_favorito">Nuevo favorito</string>
    <string name="registro_favorito_text">Se ha registrado un favorito</string>
    <string name="eliminado_favorito">Eliminado favorito</string>
    <string name="eliminado_favorito_text">Se ha eliminado un favorito</string>
	<string name="conexion_internet_ok">Conexión internet OK</string>
	<string name="conexion_internet_error">No dispone de conexión a internet</string>
	<string name="conexion_internet_info">Debe disponer de una conexión a internet para acceder a esta funcionalidad</string>
     <string name="universidad_publica">Universidad Pública</string>
     <string name="universidad_privada">Universidad Privada</string>
    <string name="universidad_alicante">Universidad de Alicante</string>
    <string name="universidad_elche">Universidad Miguel Hernández de Elche</string>
    <string name="universidad_illes_balears">Universidad de las Illes Balears</string>
    <string name="universidad_politecnica_valencia">Universitat Politécnica de València</string>
    <string name="universidad_rey_juan_carlos">Universidad Rey Juan Carlos</string>
    <string name="universidad_jaume_castellon">Universidad Jaume I de Castellón</string>
    <string name="universidad_malaga">Universidad de Málaga</string>
    <string name="universidad_complutense_madrid">Universidad Complutense de Madrid</string>
    <string name="universidad_ceu">Universidad San Pablo-CEU</string>
    <string name="universidad_upc">Universidad Politécnica de Catalunya</string>
    <string name="universidad_uam">Universidad Autónoma de Madrid</string>
    <string name="universidad_uza">Universidad de Zaragoza</string>
    <string name="universidad_upm">Universidad Politécnica de Madrid</string>
    <string name="universidad_mondragon">Mondragón Unibertsitatea</string>
    <string name="universidad_udima">Universidad a Distancia de Madrid</string>
    <string name="universidad_uax">Universidad Alfonso X El Sabio</string>
</resources>