<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:spaincomputing="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/actualizar" 
	    android:title="@string/actualizar"
	    spaincomputing:showAsAction="ifRoom|withText"
		android:icon="@drawable/update" />
	<item android:id="@+id/btnVerMapa"
	    android:title="@string/mapa"
	    spaincomputing:showAsAction="ifRoom|withText"
		android:icon="@drawable/mapa" />
	<item android:id="@+id/btnPositionASC" 
	    android:title="@string/orderByPositionASC"
	    spaincomputing:showAsAction="always|withText"
		android:icon="@drawable/order" />
	<item android:id="@+id/btnPositionDESC" 
	    android:title="@string/orderByPositionDESC"
	    spaincomputing:showAsAction="always|withText"
		android:icon="@drawable/order" />
</menu>
