<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/InfoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="right"
        android:text="@string/InfoNombre"
        android:textSize="20sp"
        android:textColor="@color/negro" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/university"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/InfoDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="right"
        android:text="@string/InfoAnyo"
        android:textColor="@color/negro"
        android:layout_alignParentRight="true"
        android:textSize="20sp" />

</RelativeLayout>
